# experiments

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
notebooks/: metrics.py  urls.txt  (+7 more)
pdftoaas/: .gitignore  Dockerfile  LICENSE.txt  README.md  demo-requirements.txt  dev-requirements.txt  eval-requirements.txt  generate_requirements.bat  pyproject.toml  requirements.txt
pdftoaas/.github/workflows/: mypy.yml  pyinstaller-demo-gradio-win.yml  ruff.yml  test.yml
pdftoaas/examples/: default_toolchain.py  demo_gradio.py  pdf2htmlEX_eclass_openai_csv.py  pdfium_eclass_openai_csv.py  txt_eclass_custom_csv.py
pdftoaas/license/: cdd.txt
pdftoaas/src/pdf2aas/: __init__.py  core.py
pdftoaas/src/pdf2aas/dictionary/: __init__.py  cdd.py  core.py  eclass.py  etim.py
pdftoaas/src/pdf2aas/evaluation/: __init__.py  aas.py  article.py  core.py  counts.py  prompt.py  values.py
pdftoaas/src/pdf2aas/extractor/: __init__.py  core.py  custom_llm_client.py  property_llm.py  property_llm_map.py  property_llm_search.py
pdftoaas/src/pdf2aas/generator/: __init__.py  aas.py  aas_technical_data_submodel.py  aas_template.py  core.py  csv_gen.py
pdftoaas/src/pdf2aas/model/: __init__.py  class_definition.py  property.py  property_definition.py
pdftoaas/tests/: test_dictionary.py  test_evaluation.py  test_extractor.py  test_generator.py  test_preprocessor.py
pdftoaas/tests/assets/: dummy-IDTA 02004-1-2_Template_Handover Documentation.aasx  dummy-result-aas-template.aasx  dummy-result-technical-data-submodel-empty.json  dummy-result-technical-data-submodel.json  dummy-result.csv  dummy-test-datasheet.txt  dummy-test-datasheet_0_NONE.html  dummy-test-datasheet_1_BODY.html  dummy-test-datasheet_2_PAGES.html  dummy-test-datasheet_3_DIVS.html  dummy-test-datasheet_4_STRUCTURE.html  dummy-test-datasheet_5_TEXT.html
(+8 files in other folders)
